--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "node": "18.17.0"
   },
   "devDependencies": {
+    "@types/react-scroll": "^1.8.7",
     "daisyui": "^3.5.0",
     "react-scroll": "^1.8.9"
   },
